# Structured-Product-Pricing

./: .gitignore  README.md  excel_fill_guide.md  pyproject.toml
data/processed/: greeks_results.md  pricing_results.md  secondary_market_results.md  sensitivity_results.md  yield_curve_bootstrapped.csv  yield_curve_bootstrapped.md
data/raw/: Pricer Energetic - 3 (1).xls
methodology/: methodology.tex  methodology.typ
presentation/: presentation.typ  presentation_speech.md
src/: draw_diagram.py  main.py  payoff_analysis.py  plot_yield_curve.py  read_documents.py  rebuild_all.py  rebuild_all_new.py  rewrite_all.py  rewrite_files.py  rewrite_readme.py  section6_secondary_market.py  step2_yield_curve.py  step3_pricing.py  step5_greeks.py  step6_sensitivity.py  step7_secondary_market.py  test_df.py
