[project]
name = "quant-pm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pymupdf>=1.26.5",
    "scipy>=1.13.1",
    "tabulate>=0.9.0",
    "typst>=0.14.8",
    "xlrd>=2.0.2",
]
